--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "dmhacker-youtube",
+    "name": "als12171-youtube-proxy",
     "version": "3.0.0",
     "description": "YouTube proxy that can fetch and play videos",
     "engines": {
-        "node": "12.16.3"
+        "node": ">=12.16.3"
     },
     "main": "index.js",
     "scripts": {
@@ -14,6 +14,7 @@
         "express": "^4.17.1",
         "log": "^6.0.0",
         "log-node": "^7.0.0",
+        "yt-list": "^0.1.1",
         "yt-search": "^2.7.3",
         "ytdl-core": "^4.5.0"
     },
